# tipatch

./: .gitignore  Gopkg.toml  README.md  build.gradle  cli.go  compress.go  dist.sh  image.go  main.go  pack.go  patcher.go  rel.sh  sentry.properties  unpack.go  util.go
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/: cwac-crossport-0.3.0.aar
app/src/androidTest/java/com/kdrag0n/tipatch/: ExampleInstrumentedTest.kt
app/src/lite/java/com/crashlytics/android/: Crashlytics.kt
app/src/lite/res/values/: attr.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bootimg.h  compress.cpp  const.cpp  const.h  decompress.cpp  gzip.cpp  gzip.h  image.cpp  image.h  io.cpp  io.h  java.cpp  java.h  jni.cpp  lzo.h  output.cpp  patcher.cpp  tipatch.cpp  tipatch.h  util.cpp  util.h
app/src/main/java/com/kdrag0n/tipatch/: AboutActivity.kt  AboutFragment.kt  ImageLocation.kt  LicenseActivity.kt  MainActivity.kt  OptionFragment.kt  PatchStep.kt  Secrets.kt
app/src/main/java/com/kdrag0n/tipatch/jni/: CompressException.java  CompressException.kt  Image.java  Image.kt  ImageException.java  ImageException.kt  ImageHeaderException.kt  NativeException.java  NativeException.kt  RamdiskMagicException.kt
app/src/main/java/com/kdrag0n/utils/: AboutCardRow.kt  Box.kt  ByteBuffer.kt  SentryEventBuilderHelper.java  Utils.kt
app/src/main/res/drawable/: ic_apply.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_book.xml  ic_delete.xml  ic_email.xml  ic_file.xml  ic_folder.xml  ic_github.xml  ic_info_outline.xml  ic_info_outline_action.xml  ic_key.xml  ic_money.xml  ic_patch.xml  ic_person.xml  ic_restore.xml  ic_send.xml  ic_storage.xml  ic_undo.xml  ic_xda.xml  launch_screen.xml
app/src/main/res/layout/: activity_about.xml  activity_license.xml  activity_main.xml  info_item_row.xml  toolbar.xml
app/src/main/res/menu/: actions.xml
app/src/main/res/raw/: xz_armv7  xz_x86
app/src/main/res/values/: attr.xml  colors.xml  ic_launcher_background.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: about.xml  options.xml
app/src/play/res/values/: attr.xml
app/src/test/java/com/kdrag0n/tipatch/: ExampleUnitTest.kt
cmd/tipatch/: cli.go  main.go  patcher.go
gradle/wrapper/: gradle-wrapper.properties
